--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
     "firebase": "^9.16.0",
     "lottie-react": "^2.3.1",
@@ -13,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-auth": "^1.0.3",
+    "react-google-button": "^0.7.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
